[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StellariaPact"
version = "0.2.0"
description = "A Discord bot for StellariaPact."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "discord.py[speed]",
    "sqlmodel",
    "aiosqlite",
    "python-dotenv",
    "pyhumps",
    "tzdata",
    "aiohttp",
    "regex",
    "aiorun",
    "uvloop; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "alembic",
]

[project.scripts]
stellaria-pact = "StellariaPact.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/StellariaPact"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
]

[tool.ruff.format]
quote-style = "double"
